[tool.poetry]
name = "strava-viewer"
version = "0.1.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
dacite = "^1.5.0"
marshmallow = "^3.6.1"
python-dotenv = "^0.13.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
ipdb = "^0.13.3"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
